despatma-visitor/tests/fail/missing_types.stderr
error[E0405]: cannot find trait `Circle` in this scope
 --> tests/fail/missing_types.rs:6:14
  |
6 | visitor!(dyn Circle, Rectangle, dyn Sphere, Arc, dyn Cube);
  |              ^^^^^^ not found in this scope
  |
help: consider importing this trait
  |
4 + use crate::library::shapes::Circle;
  |

error[E0412]: cannot find type `Rectangle` in this scope
 --> tests/fail/missing_types.rs:6:22
  |
6 | visitor!(dyn Circle, Rectangle, dyn Sphere, Arc, dyn Cube);
  |                      ^^^^^^^^^ not found in this scope
  |
help: consider importing this struct
  |
4 + use crate::library::shapes::Rectangle;
  |

error[E0405]: cannot find trait `Sphere` in this scope
 --> tests/fail/missing_types.rs:6:37
  |
6 | visitor!(dyn Circle, Rectangle, dyn Sphere, Arc, dyn Cube);
  |                                     ^^^^^^ not found in this scope
  |
help: consider importing this trait
  |
4 + use crate::library::shapes::Sphere;
  |

error[E0412]: cannot find type `Arc` in this scope
 --> tests/fail/missing_types.rs:6:45
  |
6 | visitor!(dyn Circle, Rectangle, dyn Sphere, Arc, dyn Cube);
  |                                             ^^^ not found in this scope
  |
help: consider importing one of these structs
  |
4 + use crate::library::shapes::Arc;
  |
4 + use std::sync::Arc;
  |

error[E0405]: cannot find trait `Cube` in this scope
 --> tests/fail/missing_types.rs:6:54
  |
6 | visitor!(dyn Circle, Rectangle, dyn Sphere, Arc, dyn Cube);
  |                                                      ^^^^ not found in this scope
  |
help: consider importing this trait
  |
4 + use crate::library::shapes::Cube;
  |
